[package]
name = "joshu-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazycell = "1.3.0"
nix = { version = "0.28.0", features = ["fs"] }
serde = "1.0.197"
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4"] }
